--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
         <h2 class="text-primary display-3 my-4">Ninja Quiz</h2>
       </div>
     </div>
+    <!-- Result Section -->
+    <div class="result py-4 d-none bg-light text-center">
+      <div class="container lead">
+        <p>You are <span class="text-primary display-4 p-3">0%</span> ninja</p>
+      </div>
+    </div>
     <!-- Quiz Section -->
     <div class="quiz py-4 bg-primary">
       <div class="container">
-        <h2 class="my-5 text-white">On with the quiestions...</h2>
+        <h2 class="my-5 text-white">On with the questions...</h2>
         <form class="quiz-form text-light">
           <div class="my-5">
             <p class="lead font-weight-normal">
@@ -83,7 +89,7 @@
             </div>
           </div>
           <div class="text-center">
-            <input type="submit" class="btn btn-light">
+            <input type="submit" class="btn btn-light" />
           </div>
         </form>
       </div>
